# creatable

./: Makefile  README.md  config.yaml  pyproject.toml
creatable/: cli.py  schema.py  utils.py
creatable/destination/: __init__.py  mysql.py  postgres.py
creatable/source/: __init__.py
creatable/source/file/: __init__.py  csv.py  json.py  yaml.py
tests/: test_source.py
